# oz_fastapi2

./: .coverage  .gitignore  pyproject.toml
.github/workflows/: ci.yml
app/tests/: fixtures.py  test_create_article.py  test_simple.py
